--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,52 @@
 body {
-	background-color: steelblue;
+	background-color: #152382;
+}
+
+h1 {
+	background: #2980b9;
+	color: ivory;
+	padding: 10px 20px;
+	font-size: 2em;
+	text-transform: uppercase;
+	font-weight: normal;
+	margin: 0;
+}
+
+ul {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
+
+li {
+	background: white;
+	height: 40px;
+	line-height: 40px;
+	padding: 10px;
+	color: #666;
+}
+
+li:nth-child(2n) {
+	background: #f7f7f7;
+}
+
+input {
+	font-size: 1.5em;
+	background: #f7f7f7;
+	width: 100%;
+	padding: 10px 10px 10px 20px;
+	box-sizing: border-box;
+	border: 3px solid rgba(0, 0, 0, 0);
+}
+
+input:focus {
+	background: white;
+	border: 3px solid steelblue;
+	outline: none;
+}
+
+#container {
+	width: 360px;
+	margin: 100px auto;
+	background: #f7f7f7;
 }
