--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,13 @@ input:focus {
 	outline: none;
 }
 
+#clear-list {
+	float: right;
+	display: inline-flex;
+	align-items: center;
+	font-size: 0.5em;
+}
+
 #container {
 	width: 360px;
 	margin: 100px auto;
