--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,7 @@ ul {
 
 li {
 	background: white;
+	font-size: 1.4em;
 	height: 40px;
 	line-height: 40px;
 	padding: 10px;
@@ -47,8 +48,6 @@ input:focus {
 
 #clear-list {
 	float: right;
-	display: inline-flex;
-	align-items: center;
 	font-size: 0.5em;
 }
 
@@ -56,4 +55,8 @@ input:focus {
 	width: 360px;
 	margin: 100px auto;
 	background: #f7f7f7;
+}
+
+.completed {
+	text-decoration: line-through;
 }
