--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,12 +37,12 @@ input {
 	width: 100%;
 	padding: 10px 10px 10px 20px;
 	box-sizing: border-box;
-	border: 3px solid rgba(0, 0, 0, 0);
+	border: 5px solid rgba(0, 0, 0, 0);
 }
 
 input:focus {
 	background: white;
-	border: 3px solid steelblue;
+	border: 5px solid rgb(107, 202, 143);
 	outline: none;
 }
 
@@ -59,4 +59,5 @@ input:focus {
 
 .completed {
 	text-decoration: line-through;
+	color: rgba(102, 102, 102, 0.5);
 }
